# dcis

./: .editorconfig  .gitignore  .gitlab-ci.yml  .graphqlconfig  404.html  docker-compose.yml  index.html  init.py  init.sh  readme.md
server/: .env.example  .env.production  .flake8  .gitignore  Dockerfile  external.http  generate_docs.py  manage.py  pyproject.toml  setup.cfg  verify_docstring.py  whitelist.txt
server/apps/: readme.md
server/apps/core/: apps.py  models.py  serializers.py  signals.py
server/apps/core/fixtures/: 001_User.json  002_Setting.json  003_Profile.json  004_ProfileValue.json  005_Application.json  006_Privilege.json  007_Status.json  008_AddStatus.json  008_Department.json  010_Period.json  010_Project.json  011_PeriodGroup.json  Department.json  PeriodGroup.json  Privilege.json  ProfileValue.json  Status.json  User.json
server/apps/core/management/commands/: load_fixtures.py  local_db.py
server/apps/core/middleware/: __init__.py  database_requests_middleware.py
server/apps/core/migrations/: 0001_initial.py
server/apps/core/schema/: __init__.py  mutations.py  types.py
server/apps/core/services/: user_services.py
server/apps/dashboard/: __init__.py  apps.py
server/apps/dashboard/schema/: __init__.py  types.py
server/apps/dcis/: apps.py  filters.py  forms.py  ordering.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
server/apps/dcis/helpers/: __init__.py  cache.py  cell.py  divisions.py  exceptions.py  formula_cache.py  info_fields.py  limitation_formula_cache.py  mutation.py  ordering.py  pydantic_translate.py  sheet_cache.py  sheet_formula_cache.py  theme_to_rgb.py
server/apps/dcis/management/commands/: load_curator.py  seed_dcis.py
server/apps/dcis/middleware/: __init__.py  external_token_middleware.py
server/apps/dcis/migrations/: 0001_initial.py  0002_auto_20220310_2335.py  0002_auto_20220313_0507.py  0003_auto_20220314_1355.py  0003_auto_20220315_2042.py  0004_alter_document_unique_together.py  0004_project_archive.py  0005_alter_document_unique_together.py  0006_alter_period_status.py  0007_alter_status_options.py  0007_auto_20220321_1854.py  0007_auto_20220323_0942.py  0008_alter_cell_kind.py  0008_auto_20220325_1007.py  0009_alter_cell_kind.py  0009_rowdimension_updated_at.py  0010_auto_20220329_1154.py  0011_auto_20220330_2121.py  0011_auto_20220406_1716.py  0012_alter_project_content_type.py  0013_add_value_payload.py  0014_auto_20220425_1137.py  0015_remove_columndimension_auto_size.py  0016_auto_20220610_1120.py  0016_complete_rowdimension.py  0017_strike_fix.py  0018_add_columndimension_date.py  0019_alter_periodgroup_options.py  0020_alter_division_unique_together.py  0021_add_document_user.py  0021_value_error.py  0022_protected_status.py  0023_document_object_name.py  0024_auto_20220927_1835.py  0024_number_format.py  0024_period_versioning.py  0025_alter_attribute_kind.py  0025_period_versioning.py  0026_auto_20221001_1406.py  0027_alter_attribute_unique_together.py  (+36 more)
server/apps/dcis/models/: __init__.py  comments.py  curator.py  document.py  messages.py  methodical_support.py  privilege.py  project.py  sheet.py
server/apps/dcis/permissions/: __init__.py  curator_permissions.py  document_permissions.py  period_permissions.py  project_permissions.py  sheet_permissions.py  value_permissions.py
server/apps/dcis/schema/: __init__.py  types.py
server/apps/dcis/schema/mutations/: __init__.py  aggregation_mutation.py  attribute_mutations.py  cell_mutations.py  curator_mutation.py  document_mutations.py  limitation_mutations.py  period_mutations.py  privilege_mutations.py  project_mutations.py  sheet_mutations.py  (+1 more)
server/apps/dcis/services/: add_document_data_services.py  aggregation_services.py  attribute_service.py  attribute_services.py  cell.py  cell_service.py  column_dimension_services.py  curator_services.py  divisions_services.py  document_services.py  document_unload.py  document_unload_services.py  excel_extractor.py  excel_extractor_services.py  excel_unload.py  formula_services.py  limitation_services.py  period_services.py  period_unload_services.py  privilege_services.py  project_services.py  row_dimension_services.py  sheet.py  sheet_cache_service.py  sheet_services.py  sheet_unload_services.py  status_services.py  value.py  value_services.py
server/apps/dcis/tests/: __init__.py  ordering.py
server/apps/notifications/: schema.py
server/apps/pages/: apps.py  decorators.py  signals.py  validators.py
server/apps/pages/fixtures/: 001_Language.json  002_Category.json  PageKind.json
server/apps/pages/migrations/: 0001_initial.py
server/apps/pages/models/: __init__.py  category.py  comment.py  language.py  page.py  page_kind.py  section.py  section_type.py  segment.py  tag.py  translation.py
server/apps/pages/permissions/: __init__.py  category_permissions.py  page_permissions.py  section_permissions.py  tag_permissions.py
server/apps/pages/schema/: __init__.py  types.py
server/devind/: asgi.py  celery.py  schema.py  settings.py  swagger.py  urls.py  ws_consumer.py  wsgi.py
server/docs/: conf.py  devind.rst  index.rst
server/storage/: readme.md
server/templates/: docs.md.jinja2  readme.md
server/templates/mail/: index.html
server/templates/mail/auth/: changed_password.html  confirm_email.html  recovery_password.html  register.html  request_code.html
server/templates/mail/conference/: notification.html  readme.md
(+1545 files in other folders)
