[tool.poetry]
name = "dcis-server"
version = "1.8.0"
description = "Data collection information system"
authors = ["Luferov Victor <lyferov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beautifulsoup4 = "^4.11.0"
celery = "^5.2.7"
channels = "^3.0.4"
channels-redis = "^3.4.0"
daphne = "^3.0.2"
Django = "^3"
django-celery-beat = "^2.2.1"
django-celery-results = "^2.3.1"
django-channels-graphql-ws = "^0.9.1"
django-cors-headers = "^3.13.0"
django-cors-middleware = "^1.5.0"
django-filter = "^21.1"
django-push-notifications = "^3.0.0"
djangorestframework = "^3.13.1"
flatten-dict = "^0.4.2"
graphene-django = "^2.15.0"
graphene-django-optimizer = "^0.8"
graphene-file-upload = "^1.3.0"
graphql-relay = "^2"
openpyxl = "^3.0.10"
Pillow = "^9.1.1"
progress = "^1.6"
python-dotenv = "^0.20.0"
pywebpush = "^1.14.0"
redis = "^4.3.3"
requests = "^2.28.0"
sentry-sdk = "^1.5.12"
user-agents = "^2.2.0"
psycopg2-binary = "^2.9.2"
django-oauth-toolkit = "^1.7.1"
paramiko = "^2.11.0"
lxml = "4.9.0"
inflection = "^0.5.1"
devind-helpers = "^0"
devind-core = "^0"
devind-notifications = "^0"
django-cbias-auth = "^0"
devind-dictionaries = "^0"
django-seed = "^0.3.1"
graphene-django-cud = "^0.10.0"
django-redis = "^5.2.0"
django-model-utils = "^4.2.0"
xlsx-evaluate = "^0.4.2"
Sphinx = "^5.0.2"
docutils = "^0.18.1"
sphinx-markdown-builder = "^0.5.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^1.5.3"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.0"
flake8-simplify = "^0.19.2"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.13.0"
flake8-use-fstring = "^1.3"
flake8-annotations = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
